src/objects/BFM_OCR_Template__c.object
<CustomObject>
    <description>Object that covers all the OCR templates needed for the the OCR processes. The templates should be sent to the OCR tool.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Template_XML_File__c</fullName>
        <label>OCR Template XML File</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OCR Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>